# ArcVibrance

./: .arcvibrance-bootstrap  .gitignore  BRAND_USAGE.md  LICENSE  README.md  RELEASE_NOTES_C1.18.1.md  RELEASE_NOTES_v1.0.md  THIRD_PARTY_NOTICES.md  build.ps1
.github/workflows/: build-release-x64.yml  deploy-pages.yml
ArcVibrance.WinUI/: App.xaml.cs  ArcVibrance.WinUI.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
ArcVibrance.WinUI/Models/: AgentStatus.cs
ArcVibrance.WinUI/Services/: AgentClient.cs  BrandAssets.cs  ExecutableIconService.cs  GameNameResolver.cs  ProfileNameStore.cs  SettingsStore.cs  UpdateService.cs
NativeAgent/: AgentClient.cpp  AgentTray.cpp  AgentTray.h  AppState.h  ArcVibranceRuntime.cpp  ArcVibranceRuntime.h  CMakeLists.txt  ColorAlgorithms_App.cpp  ColorBackendFactory.cpp  ColorBackendFactory.h  ForegroundWatcher.h  GameMonitor.cpp  GameMonitor.h  GameProfile.h  IGCLManager.cpp  IGCLManager.h  IntelColorBackend.h  Logger.cpp  Settings.cpp  agent_main.cpp  cApiWrapper.cpp  igcl_api.h  resource.h
arcvibrance/: ArcVibrance.sln  MIGRATION_C1.md  MIGRATION_C1_10.md  MIGRATION_C1_11.md  MIGRATION_C1_12.md  MIGRATION_C1_13.md  MIGRATION_C1_5.md  MIGRATION_C1_7.md  MIGRATION_C1_8.md  MIGRATION_C1_9.md  MILESTONE_C1_14.md  MILESTONE_C1_15.md  MILESTONE_C1_16.md  MILESTONE_C1_17.md  MILESTONE_C1_18.md  MILESTONE_C1_18_1.md  README.md
arcvibrance/ArcVibrance.WinUI/: App.xaml  Program.cs  app.manifest
arcvibrance/ArcVibrance.WinUI/Converters/: BooleanToVisibilityConverter.cs
arcvibrance/ArcVibrance.WinUI/Infrastructure/: ObservableObject.cs
arcvibrance/ArcVibrance.WinUI/Models/: AppSettings.cs  GameProfile.cs
arcvibrance/ArcVibrance.WinUI/Services/: NativeWindow.cs  ProfileStore.cs  UiCloseSignal.cs
arcvibrance/ArcVibrance.WinUI/ViewModels/: MainViewModel.cs  (+1 more)
arcvibrance/NativeAgent/: .gitignore  AgentClient.h  AgentProtocol.h  AppState.cpp  ArcVibrance.aps  ArcVibrance.rc  CMakeLists.txt  CMakeLists_sources.txt  ColorAlgorithms_App.h  Color_Sample_App.cpp  ForegroundWatcher.cpp  HueSaturation.cpp  HueSaturation.h  IColorBackend.h  IntelColorBackend.cpp  Logger.h  MILESTONE_A.md  MILESTONE_A2.md  MILESTONE_A3.md  MILESTONE_A4.md  MILESTONE_A5.md  MILESTONE_A5_1.md  MILESTONE_B0_2.md  MILESTONE_B1_1.md  MILESTONE_B1_2.md  MILESTONE_B1_3.md  MILESTONE_B1_3_1.md  MILESTONE_B1_3_2.md  MILESTONE_B1_3_3.md  MILESTONE_B2_1.md  MILESTONE_B2_2.md  MILESTONE_B2_5.md  MILESTONE_B2_6.md  MILESTONE_B2_7.md  MILESTONE_B2_8A.md  MILESTONE_B2_8A_1.md  MILESTONE_B2_8A_2.md  MILESTONE_B2_8A_3.md  MILESTONE_B2_8B.md  MILESTONE_B2_8B_2.md  (+13 more)
arcvibrance/NativeAgent/LegacyWin32UI/: MainWindow.cpp  MainWindow.h  Theme.cpp  Theme.h  TrayIcon.cpp  TrayIcon.h  main.cpp  main_console_backup.cpp
arcvibrance/NativeAgent/tests/: ProfileMatchingTests.cpp
website/: README.md  index.html  script.js  styles.css
(+1 files in other folders)
